--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-Django==5.1.2
-django-environ==0.12.0
-psycopg2-binary==2.9.11
-django-htmx==1.27.0
 channels==4.3.2
 channels-redis==4.3.0
-redis==7.1.0
 celery==5.6.0
+daphne==4.1.2
+Django==5.1.2
+django-environ==0.12.0
 django-extensions==4.1
+django-htmx==1.27.0
+dj-database-url==2.3.0
+psycopg2-binary==2.9.11
+redis==7.1.0
+whitenoise==6.8.2
